--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,29 @@
-spring.application.name=testing
+server.port = 5432
+
+#Setup JDBC connection
+spring.datasource.url=jdbc:postgresql://dpg-cmtfmlacn0vc73ba365g-a.singapore-postgres.render.com/db_pos_sales_react_c9gz
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#Setup db login credentials
+spring.datasource.username=db_pos_sales_react_c9gz_user
+spring.datasource.password=aq0c55Wjh8aHa3IaoM4YnP9rarT65EnQ
+spring.config.import=optional:file:.env[.properties]
+
+# Auto create tables based on entities
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+#for stack trace error not to appear
+server.error.include-stacktrace=never
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dilvenpos@gmail.com
+spring.mail.password=zsmxmumblvvkidcc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.maximumPoolSize=5
+# spring.mvc.dispatch-options-request=true
