--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-server.port = 8080
+server.port = 3000
 
 #Setup JDBC connection
-spring.datasource.url=jdbc:postgresql://dpg-cmtfmlacn0vc73ba365g-a.singapore-postgres.render.com/db_pos_sales_react_c9gz
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_pos_sales_react_c9gz
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Setup db login credentials
-spring.datasource.username=db_pos_sales_react_c9gz_user
-spring.datasource.password=aq0c55Wjh8aHa3IaoM4YnP9rarT65EnQ
+spring.datasource.username=postgres
+spring.datasource.password=root
 spring.config.import=optional:file:.env[.properties]
 
 # Auto create tables based on entities
