--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 server.port = 3000
 
 #Setup JDBC connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_pos_sales_react_c9gz
+spring.datasource.url=jdbc:postgresql://dpg-cp0d4ig21fec7382j440-a.oregon-postgres.render.com/db_pos_sales_react_c9gz_cryb
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Setup db login credentials
-spring.datasource.username=postgres
-spring.datasource.password=root
-spring.config.import=optional:file:.env[.properties]
+spring.datasource.username=db_pos_sales_react_c9gz_cryb_user
+spring.datasource.password=4U70oJ9vHl7uFOXNReocszSlym3MrwVd
 
 # Auto create tables based on entities
 spring.jpa.hibernate.ddl-auto=update
