--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
-server.port = 3000
+server.port = 5432
 
 #Setup JDBC connection
-spring.datasource.url=jdbc:postgresql://dpg-cp0d4ig21fec7382j440-a.oregon-postgres.render.com/db_pos_sales_react_c9gz_cryb
+spring.datasource.url=jdbc:postgresql://cp0d4ig21fec7382j440-a.oregon-postgres.render.com/db_pos_sales_react_c9gz_cryb
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #Setup db login credentials
 spring.datasource.username=db_pos_sales_react_c9gz_cryb_user
 spring.datasource.password=4U70oJ9vHl7uFOXNReocszSlym3MrwVd
+spring.config.import=optional:file:.env[.properties]
 
 # Auto create tables based on entities
 spring.jpa.hibernate.ddl-auto=update
